<resources>
    <string name="app_name">Games Education</string>
    <string name="back">Back</string>
    <string name="play_again">New game</string>
    <string name="reset_label">Reset</string>
    <string name="a">a</string>
    <string name="name_prompt">Enter your name:  </string>
    <string name="button_label">Continue</string>
    <string name="desc">One of the buttons on the Memory board</string>
    <string name="title_activity_user_name">User Name</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="game_title">Tic-Tac-Toe</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>

    <string name="toggle_sound_on_label">Toggle Sound(ON)</string>
    <string name="toggle_sound_off_label">Toggle Sound(OFF)</string>

    <string name="help_label">Help</string>

    <string name="about_title">About Android Tic-Tac-Toe</string>
    <string name="about_text">This Application is developed by Vladyslav Bilous</string>

    <string name="action_settings_label">Settings</string>

    <string name="howtoplay_title">How To Play?</string>
    <string name="howtoplay_Content">\n1. Choose who goes first.\n2. Enter your name in place of Player1 and Player2 by taping on them(Optional).\n3.First Player has X symbol and the second Player has O symbol.\n4.These symbols will be placed on the table, in the attempt to have three of them in a row.\n 5.The players take turns putting their symbol on the table.\n6.The first player to have 3 of their symbols in a row, whether it is horizontally, vertically, or diagonally, is the winner.\n </string>

    <string name="settings_help_title">Setting Help</string>
    <string name="settings_help_content">\n1. Sound can be toggled On or Off from the settings. Current status of Sound(On or OFF) is shows on the toggle sound label.\n</string>


    <string name="option_empty"> </string>
    <string name="option_x">X</string>
    <string name="option_o">O</string>

    <string name="game_play_restart_label">Restart</string>
    <string name="game_play_quit_label">Quit</string>
    <string name="game_play_back_label">Back</string>

    <string name="Player1_label">Player1 : </string>
    <string name="Player2_label">Player2 : </string>




    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game">Game</string>

    <string name="title_App">Memory Game</string>
    <string name="option_2x2">2x2</string>
    <string name="option_4x4">4x4</string>
    <string name="option_6x6">6x6</string>
    <string name="toastA">Starting the baby gird!</string>
    <string name ="toastB">Starting an acceptable grid!</string>
    <string name="toastC">Starting BIG gird!</string>
    <string name="sv_pref">SAVE PREFERENCE</string>
    <string name="exit">EXIT GAME</string>
    <string name="st_game">START GAME</string>
    <string name="grid_2">2X2 GRID</string>
    <string name="grid_4">4X4 GRID</string>
    <string name="grid_6">6X6 GRID</string>

    <string name="mathematics">Mathematics</string>
    <string name="help_info">You Do The Math! is an arithmetic game.\n\n
    Choose Easy, Medium or Hard level to begin.\n\n
    Answer the question by typing on the number pad displayed and pressing enter.\n\n
    Press the C button to clear an existing answer.\n\n
    Each question may be an addition, subtraction, multiplication or division.\n\n
    Your ten best scores will automatically be saved into the High Scores.</string>
    <string name="zero">Score: 0</string>
    <string name="moves">moves :</string>
    <string name="color">color :</string>

    <string name="loading">Loading...</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>


    <string name="scores">High Scores</string>
    <string name="how_to_play">How to Play</string>
    <string name="play">Play</string>
    <string name="play_button">Play</string>
    <string name="score_button">High Scores</string>
    <string name="exit_button">Exit</string>
  <!--  <string name="dialog_title">Exit: Are you sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>-->
    <string name="scores_head">HIGH SCORES</string>
    <string name="enter_button">Enter</string>
    <string name="score_text">Score: 0</string>
    <string name="level_name">Choose a level</string>



    <string name="action_back">Back</string>

    <string name="action_barley">Barley</string>

    <string name="action_startBarley">New Barley</string>
    <string name="action_exitBarley">Exit from Barley</string>

    <string name="action_select">Select</string>
    <string name="memory_game">Memory Game</string>
    <string name="shulte_start">Start</string>
    <string name="shulte_options">Options</string>
    <string name="shulte_exit">Exit</string>
    <string name="shulte_table">Shulte Table</string>
    <string name="mix">mix</string>
    <string name="steps">Steps Qty: 0</string>
    <string name="pic_load">Load picture</string>
    <string name="del_num">Delete numbers</string>
    <string-array name="type">
        <item>New Game</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>4 X 6</item>
        <item>5 X 6</item>

    </string-array>
    <string name="gameplay_new_game_button">New</string>
    <string name="game_play_status_bar_win">You win!</string>
    <string name="game_play_status_bar_step_format">Steps Used: %d</string>
    <string name="game_play_dialog_pause_dialog_title">Menu</string>
    <string name="pause_menu_background_change">Background</string>
    <string name="class_check">Check Your class</string>
    <string name="wl">Welcome</string>
    <string name="clk">Please, click for start!</string>
</resources>
