<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings_menu"
        android:orderInCategory="1"
        android:title="@string/action_settings_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/toogle_sound_menu"
        android:orderInCategory="2"
        android:title="@string/toggle_sound_on_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_menu"
        android:orderInCategory="3"
        android:title="@string/about_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_menu"
        android:orderInCategory="4"
        android:title="@string/help_label"
        app:showAsAction="never" />

</menu>