<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="net.brigs.gameseducation.games.memory.MemoryActivity"

    android:gravity="center"
    android:weightSum="1"
    android:background="@android:color/background_dark">


    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_4"
        android:fontFamily="monospace"
        android:padding="20dp"
        android:text="@string/title_App"
        android:textAllCaps="true"
        android:textColor="#f44245"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/GridGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_save"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/dp_tile_max_width"
        android:layout_marginRight="@dimen/dp_gameplay_status_bar_height"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_2x2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="0dp"
            android:buttonTint="@android:color/holo_red_dark"
            android:text="@string/grid_2"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/rb_4x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/dp_gameplay_bottom_button_bar_height"
            android:layout_marginRight="@dimen/dp_15"
            android:buttonTint="@android:color/holo_red_dark"
            android:text="@string/grid_4"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/rb_6x6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/dp_gameplay_bottom_button_bar_height"
            android:layout_marginRight="@dimen/dp_15"
            android:buttonTint="@android:color/holo_red_dark"
            android:text="@string/grid_6"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />

    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start"
        android:layout_alignParentStart="true"
        android:text="@string/sv_pref"
        android:textSize="@dimen/dp_15"
        android:background="@drawable/memory_pref"
        android:layout_marginBottom="@dimen/dp_4"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_exit"
        android:layout_alignParentStart="true"
        android:text="@string/st_game"
        android:textSize="@dimen/dp_15"
        android:background="@drawable/memory_st"
        android:layout_marginBottom="@dimen/dp_4"/>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/exit"
        android:textSize="@dimen/dp_15"
        android:background="@drawable/memory_ex"
        android:layout_marginBottom="@dimen/dp_4"/>

</RelativeLayout>
