<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="70dp" >


        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/mathematics"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:textSize="@dimen/dp_gameplay_bottom_button_bar_height"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_gameboard_left_right_margin"
            android:background="@drawable/enter_background"
            android:text="@string/play_button"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/high_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_gameboard_left_right_margin"
            android:background="@drawable/enter_background"
            android:text="@string/score_button"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/high_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_gameboard_left_right_margin"
            android:background="@drawable/enter_background"
            android:text="@string/exit_button"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_vertical_margin"
            android:textStyle="bold" />

</RelativeLayout>
